--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -2,26 +2,27 @@
 
 
 <p>
-  <mat-toolbar color="primary"  >
+  <mat-toolbar color="bg-red-500"  >
 
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button mat-menu-item [routerLink]="['/account']">
         <mat-icon>account_circle</mat-icon>
         <span>Account</span>
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item [routerLink]="['/deposit']">
         <mat-icon>account_circle</mat-icon>
         <span>Deposit</span>
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item [routerLink]="['/transfer']">
         <mat-icon>account_circle</mat-icon>
         <span>Transfer</span>
       </button>
-      <button mat-menu-item>
+      <button  (click)="singOut()"   mat-menu-item>
         <mat-icon>clear</mat-icon>
         <span>Sign out</span>
       </button>
     </mat-menu>
+
 
     <span>Bank sofka</span>
     <span class="example-spacer"></span>
