--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-full">
+<div class="min-h-full" *ngIf="this.currentRoute !== '/sign-in' && this.currentRoute !== '/sign-up'">
   <nav class="bg-gray-800">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-16 items-center justify-between">
@@ -9,11 +9,8 @@
           <div class="hidden md:block">
             <div class="ml-10 flex items-baseline space-x-4">
               <a routerLink="/dashboard" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Escritorio</a>
-
               <a routerLink="/user-accounts" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Cuentas</a>
-
               <a routerLink="/customers-table" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Transferir</a>
-
               <a routerLink="/accounts-table" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Depositar</a>
             </div>
           </div>
@@ -29,7 +26,7 @@
 
             <div class="relative ml-3">
               <div>
-                <button type="button" (click)="clickEvent()" class="flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                <button type="button" (click)="userDropdownSwitch()" class="flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                   <span class="sr-only">Abrir menu de usuario</span>
                   <img class="h-8 w-8 rounded-full" src="https://yt3.ggpht.com/ytc/AMLnZu8QsSEu3Mi6gXxvOK6gRy8u-yjLhbdLYfOi7cz0=s900-c-k-c0x00ffffff-no-rj" alt="">
                 </button>
@@ -48,9 +45,7 @@
               <div id="userDropdown" *ngIf="userDropdown === true" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
                 <!-- Active: "bg-gray-100", Not Active: "" -->
                 <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-0">Tu perfil</a>
-
                 <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-1">Opciones</a>
-
                 <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-2">Cerrar sesión</a>
               </div>
             </div>
